samples/_failures_safe/1761317343_a37d19_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d6eff7f3.c: In function ‘main’:
./samples/SAFE/__tmp_d6eff7f3.c:145:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  145 |     size_t compressed_size
      |     ^~~~~~
./samples/SAFE/__tmp_d6eff7f3.c:145:5: error: expected declaration or statement at end of input
